--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -179,11 +179,21 @@
                             </a>
                         </div>
                         <div class="name-col">
-                            <p>Name</p>
-                            <p>Last</p>
-                            <p>24h Change</p>
-                            <p>Market Cap</p>
+                            <p style="width: 140px;">Name</p>
+                            <p style="width: 120px;">Last Price</p>
+                            <p style="width: 120px;">24h Change</p>
+                            <p style="width: 130px; text-align: end;">Market Cap</p>
                         </div>
+                        <a href="" class="crypto">
+                            <div class="coin">
+                                <img src="../static/img/homepage/coin1.png" alt="">
+                                <p id="p1">BNB</p>
+                                <p id="p2">BNB</p>
+                            </div>
+                            <p style="width: 120px;">₫7,256,834</p>
+                            <p style="width: 120px;">-0.58%</p>
+                            <p style="width: 130px;text-align: end;">₫1,146,498,374M</p>
+                        </a>
                     </div>
                 </div>
             </main>
