--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/homepage.css">
 </head>
+
 <body>
     <div id="app">
         <div class="flex-container">
@@ -96,7 +97,8 @@
                                 <h1>Buy, trade, and hold 350+ cryptocurrencies on Binance</h1>
                                 <div class="sign-up">
                                     <a href="">
-                                        <i class="fa fa-gift" aria-hidden="true" style="font-size: 18px; color: rgb(240, 185, 11); padding: 4px;"></i>
+                                        <i class="fa fa-gift" aria-hidden="true"
+                                            style="font-size: 18px; color: rgb(240, 185, 11); padding: 4px;"></i>
                                         <p id="su-top">Trade Bitcoin for free </p>
                                         <i class="fas fa-greater-than" style="padding: 5px; opacity: 0.7;"></i>
                                     </a>
@@ -113,7 +115,8 @@
                                             </div>
                                             <div class="btn-plg">
                                                 <a href="">
-                                                   <img src="../static/img/homepage/google-icon.png" alt="" width="16px" style="margin-right: 8px;">
+                                                    <img src="../static/img/homepage/google-icon.png" alt=""
+                                                        width="16px" style="margin-right: 8px;">
                                                     <p>Google</p>
                                                 </a>
                                                 <a href="" style="margin-left: 24px;">
@@ -143,8 +146,9 @@
                                 <p>Registered users</p>
                             </div>
                             <div class="text">
-                                <h1> <0.10% </h1>
-                                <p>Lowest transaction fees</p>
+                                <h1>
+                                    <0.10% </h1>
+                                        <p>Lowest transaction fees</p>
                             </div>
                         </div>
                     </div>
@@ -174,25 +178,76 @@
                         <div class="title">
                             <h1>Popular cryptocurrencies</h1>
                             <a href="">
-                                View more markets 
+                                View more markets
                                 <i class="fas fa-greater-than    " style="margin-left: 5px;"></i>
                             </a>
                         </div>
                         <div class="name-col">
-                            <p style="width: 140px;">Name</p>
+                            <p style="width: 120px;">Name</p>
                             <p style="width: 120px;">Last Price</p>
                             <p style="width: 120px;">24h Change</p>
-                            <p style="width: 130px; text-align: end;">Market Cap</p>
+                            <p style="width: 140px; text-align: end;">Market Cap</p>
                         </div>
                         <a href="" class="crypto">
                             <div class="coin">
                                 <img src="../static/img/homepage/coin1.png" alt="">
-                                <p id="p1">BNB</p>
-                                <p id="p2">BNB</p>
+                                <div style="display: flex; align-items: center;">
+                                    <p id="p1">BNB</p>
+                                    <p id="p2">BNB</p>
+                                </div>
                             </div>
                             <p style="width: 120px;">₫7,256,834</p>
                             <p style="width: 120px;">-0.58%</p>
-                            <p style="width: 130px;text-align: end;">₫1,146,498,374M</p>
+                            <p style="width: 140px;text-align: end;">₫1,146,498,374M</p>
+                        </a>
+                        <a href="" class="crypto">
+                            <div class="coin">
+                                <img src="../static/img/homepage/coin2.png" alt="">
+                                <div style="display: flex; align-items: center;">
+                                    <p id="p1">Bitcoin</p>
+                                    <p id="p2">BTC</p>
+                                </div>
+                            </div>
+                            <p style="width: 120px;">₫653,128,902</p>
+                            <p style="width: 120px;">-0.62%</p>
+                            <p style="width: 140px;text-align: end;">₫12,635,970,427M</p>
+                        </a>
+                        <a href="" class="crypto">
+                            <div class="coin">
+                                <img src="../static/img/homepage/coin3.png" alt="">
+                                <div style="display: flex; align-items: center;">
+                                    <p id="p1">Ethereum</p>
+                                    <p id="p2">ETH</p>
+                                </div>
+                            </div>
+                            <p style="width: 120px;">₫43,472,106</p>
+                            <p style="width: 120px;">-0.82%</p>
+                            <p style="width: 140px;text-align: end;">₫5,236,271,562M</p>
+                        </a>
+                        <a href="" class="crypto">
+                            <div class="coin">
+                                <img src="../static/img/homepage/coin4.png" alt="">
+                                <div style="display: flex; align-items: center;">
+                                    <p id="p1">Galxe</p>
+                                    <p id="p2">GAL</p>
+                                </div>
+                            </div>
+                            <p style="width: 120px;">₫43,693</p>
+                            <p style="width: 120px;" class="positive">+1.80%</p>
+                            <p style="width: 140px;text-align: end;">₫2,372,360M</p>
+                        </a>
+                        <a href="" class="crypto">
+                            <div class="coin">
+                                <img src="../static/img/homepage/coin5.png" alt="">
+                                <div style="display: flex; align-items: center;">
+                                    <p id="p1">Green Metaverse Token</p>
+                                    <p id="p2">GMT</p>
+                                </div>
+
+                            </div>
+                            <p style="width: 120px;">₫8,865</p>
+                            <p style="width: 120px;">-0.68%</p>
+                            <p style="width: 140px;text-align: end;">₫5,331,504M</p>
                         </a>
                     </div>
                 </div>
