--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="https://public.bnbstatic.com/static/images/common/favicon.ico" data-shuvi-head="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-I5B1+ZV8JbmqOvoh6Lq3pPdU6aWU6jf0J+1ZQxCzKlX8WUJMLlUOXyQhlRJdRpeIwjWLsFwvlCZz3pT/vmX/Kw==" crossorigin="anonymous" />
+    <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/bab_token.css">
     <title>BAB token</title>
 </head>
@@ -158,71 +160,109 @@
                                 <div class="title_below"><b>Service</b></div>
                             </div>
                             <div class="below_item">
-                                <a class="item" href="https://www.binance.com/en/about">Downloads</a>
-                                <a class="item" href="https://www.binance.com/en/about">Press</a>
-                                <a class="item" href="https://www.binance.com/en/about">Careers</a>
-                                <a class="item" href="https://www.binance.com/en/about">Business Contacts</a>
-                                <a class="item" href="https://www.binance.com/en/about">Community</a>
-                                <a class="item" href="https://www.binance.com/en/about">Binance Blog</a>
-                                <a class="item" href="https://www.binance.com/en/about">Building Trust</a>
-                                <a class="item" href="https://www.binance.com/en/about">Legal</a>
-                                <a class="item" href="https://www.binance.com/en/terms">Terms</a>
-                                <a class="item" href="https://www.binance.com/en/privacy">Privacy</a>
-                                <a class="item" href="https://www.binance.com/en/risk-warning">Risk Warning</a>
-                                <a class="item" href="https://www.binance.com/en/support/announcement">Announcements</a>
-                                <a class="item" href="https://www.binance.com/en/news">News</a>
-                                <a class="item" href="https://www.binance.com/en/support/list/notices">Notices</a>
-                                <a class="item" href="https://www.binance.com/en/country-region-selector">Sitemap</a>
-                                <a class="item" href="https://www.binance.com/en/about">Cookie Preferences</a>
+                                <a class="item" href="https://www.binance.com/en/download">Downloads</a>
+                                <a class="item" href="https://www.binance.com/en/desktop-download">Desktop Application</a>
+                                <a class="item" href="https://www.binance.com/en/buy-sell-crypto">Buy Crypto</a>
+                                <a class="item" href="https://www.binance.com/en/vip-institutional-services">Institutional & VIP Services</a>
+                                <a class="item" href="https://www.binance.com/en/otc">OTC Trading</a>
+                                <a class="item" href="https://www.binance.com/en/activity/referral?utm_source=Lite_web_footer">Referral</a>
+                                <a class="item" href="https://www.binance.com/en/activity/affiliate">Affiliate</a>
+                                <a class="item" href="https://www.binance.com/en/bnb">BNB</a>
+                                <a class="item" href="https://www.binance.com/en/my/coin-apply">Listing Application</a>
+                                <a class="item" href="https://c2c.binance.com/en/merchantApplication">P2P Merchant Application</a>
+                                <a class="item" href="https://p2p.binance.com/en/p2pro">P2Pro Merchant Application</a>
+                                <a class="item" href="https://www.binance.com/en/landing/data">Historical Market Data</a>
+                                <a class="item" href="https://www.binance.com/en/proof-of-reserves">Proof of Reserves</a>
+
                             </div>
                         </div>
                         <div class="colne">
                             <div class="below_title">
-                                <div class="title_below"><b>About Us</b></div>
+                                <div class="title_below"><b>Support</b></div>
                             </div>
                             <div class="below_item">
-                                <a class="item" href="https://www.binance.com/en/about">About</a>
-                                <a class="item" href="https://www.binance.com/en/about">Press</a>
-                                <a class="item" href="https://www.binance.com/en/about">Careers</a>
-                                <a class="item" href="https://www.binance.com/en/about">Business Contacts</a>
-                                <a class="item" href="https://www.binance.com/en/about">Community</a>
-                                <a class="item" href="https://www.binance.com/en/about">Binance Blog</a>
-                                <a class="item" href="https://www.binance.com/en/about">Building Trust</a>
-                                <a class="item" href="https://www.binance.com/en/about">Legal</a>
-                                <a class="item" href="https://www.binance.com/en/terms">Terms</a>
-                                <a class="item" href="https://www.binance.com/en/privacy">Privacy</a>
-                                <a class="item" href="https://www.binance.com/en/risk-warning">Risk Warning</a>
-                                <a class="item" href="https://www.binance.com/en/support/announcement">Announcements</a>
-                                <a class="item" href="https://www.binance.com/en/news">News</a>
-                                <a class="item" href="https://www.binance.com/en/support/list/notices">Notices</a>
-                                <a class="item" href="https://www.binance.com/en/country-region-selector">Sitemap</a>
-                                <a class="item" href="https://www.binance.com/en/about">Cookie Preferences</a>
+                                <a class="item" href="https://www.binance.com/en/my/user-support/feedback/entry">Request a Feature</a>
+                                <a class="item" href="https://www.binance.com/en/support">Support Center</a>
+                                <a class="item" href="https://www.binance.com/en/chat">24/7 Chat Support</a>
+                                <a class="item" href="https://www.binance.com/en/binance-api">APIs</a>
+                                <a class="item" href="https://www.binance.com/en/fee/schedule">Fees</a>
+                                <a class="item" href="https://www.binance.com/en/trade-rule">Trading Rules</a>
+                                <a class="item" href="https://www.binance.com/en/official-verification">Binance Verify</a>
+                                <a class="item" href="https://www.binance.com/en/support/law-enforcement">Law Enforcement Requests</a>
+                                <a class="item" href="https://www.binance.com/en/binance-legal">Binance Legal (Court Orders)</a>
+                                <a class="item" href="https://www.binance.com/en/airdrop">Binance Airdrop Portal</a>
+
                             </div>
                         </div>
                         <div class="colne">
                             <div class="below_title">
-                                <div class="title_below"><b>About Us</b></div>
+                                <div class="title_below"><b>Learn</b></div>
                             </div>
                             <div class="below_item">
-                                <a class="item" href="https://www.binance.com/en/about">About</a>
-                                <a class="item" href="https://www.binance.com/en/about">Press</a>
-                                <a class="item" href="https://www.binance.com/en/about">Careers</a>
-                                <a class="item" href="https://www.binance.com/en/about">Business Contacts</a>
-                                <a class="item" href="https://www.binance.com/en/about">Community</a>
-                                <a class="item" href="https://www.binance.com/en/about">Binance Blog</a>
-                                <a class="item" href="https://www.binance.com/en/about">Building Trust</a>
-                                <a class="item" href="https://www.binance.com/en/about">Legal</a>
-                                <a class="item" href="https://www.binance.com/en/terms">Terms</a>
-                                <a class="item" href="https://www.binance.com/en/privacy">Privacy</a>
-                                <a class="item" href="https://www.binance.com/en/risk-warning">Risk Warning</a>
-                                <a class="item" href="https://www.binance.com/en/support/announcement">Announcements</a>
-                                <a class="item" href="https://www.binance.com/en/news">News</a>
-                                <a class="item" href="https://www.binance.com/en/support/list/notices">Notices</a>
-                                <a class="item" href="https://www.binance.com/en/country-region-selector">Sitemap</a>
-                                <a class="item" href="https://www.binance.com/en/about">Cookie Preferences</a>
+                                <a class="item" href="https://academy.binance.com/en/learn-and-earn">Learn & Earn</a>
+                                <a class="item" href="https://www.binance.com/en/price">Browse Crypto Prices</a>
+                                <a class="item" href="https://www.binance.com/en/price/bitcoin">Bitcoin Price</a>
+                                <a class="item" href="https://www.binance.com/en/price/ethereum">Ethereum Price</a>
+                                <a class="item" href="https://www.binance.com/en/how-to-buy/bnb">Buy BNB</a>
+                                <a class="item" href="https://www.binance.com/en/busd">Buy BUSD</a>
+                                <a class="item" href="https://www.binance.com/en/how-to-buy/bitcoin">Buy Bitcoin</a>
+                                <a class="item" href="https://www.binance.com/en/how-to-buy/ethereum">Buy Ethereum</a>
+                                <a class="item" href="https://www.binance.com/en/how-to-buy/dogecoin">Buy Dogecoin</a>
+                                <a class="item" href="https://www.binance.com/en/how-to-buy/xrp">Buy XRP</a>
+                                <a class="item" href="https://www.binance.com/en/altcoins/tradable">Buy Tradable Altcoins</a>
                             </div>
                         </div>
                     </div>
+                    <div id="Community">
+                        <div id="Community_icon">
+                            <div class="below_title">
+                                <div class="title_below"><b>Community</b></div>
+                            </div>
+                            <div id="below_icon">
+                                <div class="table_icon">
+                                    <div>
+                                        <a href="https://discord.gg/jE4wt8g2H2">
+                                            <div class="icon"><i class="fa-brands fa-discord"></i></div>
+                                        </a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.binance.com/en/community"><i class="fa-brands fa-telegram"></i></a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.tiktok.com/@binance?lang=en"><i class="fa-brands fa-tiktok"></i></a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.facebook.com/binance"><i class="fa-brands fa-facebook"></i></a>
+                                    </div>
+                                </div>
+                                <div class="table_icon">
+                                    <div class="clone_icon">
+                                        <a href="https://twitter.com/binance"><i class="fa-brands fa-twitter"></i></a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.reddit.com/r/binance"><i class="fa-brands fa-reddit"></i></a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.instagram.com/Binance/"><i class="fa-brands fa-instagram"></i></a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.instagram.com/Binance/"><i class="fa-thin fa-circle-euro"></i></a>
+                                    </div>
+                                </div>
+                                <div class="table_icon">
+                                    <div class="clone_icon">
+                                        <a href="https://vk.com/binance"><i class="fa-brands fa-vk" ></i></i></a>
+                                    </div>
+                                    <div class="clone_icon">
+                                        <a href="https://www.youtube.com/binanceyoutube"><i class="fa-brands fa-youtube"></i></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="end">
+                    <div>Binance © 2023</div>
                 </div>
             </div>
         </div>
