--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -249,6 +249,8 @@
                             <p style="width: 120px;">-0.68%</p>
                             <p style="width: 140px;text-align: end;">₫5,331,504M</p>
                         </a>
+                        <div class="signup">Sign up now to build your own portfolio for free!</div>
+                        <a href="" class="get-start">Get Started</a>
                     </div>
                 </div>
             </main>
