--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -253,6 +253,17 @@
                         <a href="" class="get-start">Get Started</a>
                     </div>
                 </div>
+                <div class="content5-container">
+                    <div class="content5">
+                        <div class="left">
+                            <div class="title">
+                                <div class="text1">Build your crypto portfolio</div>
+                                <div class="text2">Start your first trade with these easy steps.</div>
+                            </div>
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                </div>
             </main>
             <footer></footer>
         </div>
