BAB_Token: Update html, css: add-menu_above, conten_menu, icon_menu, demo,bab_token,hinh11...

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -17,7 +17,70 @@
         <div id="above">
             <div id="menu_above">
                 <div id="logo">
-                    <img src="../static/img/bab_token/binance-h.png" alt="">
+                    <a href=""><img src="../static/img/bab_token/binance-h.png" alt=""></a>
+                </div>
+                <div class="flex-menu">
+                    <div class="item-menu" style="width: 58px; ">
+                        <img src="../static/img/bab_token/babt-menu.png" alt="" style="width: 20px; height:20px;">
+                        <i class="fa fa-caret-down" aria-hidden="true" style="margin: 0;"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Buy Crypto</p>
+                        <div class="vnd">USD</div>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Markets</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Trade</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Delivatives</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Earn</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Finance</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>NFT</p>
+                    </div>
+                    <div class="item-menu">
+                        <p>Institutional</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Feed</p>
+                    </div>
+                </div>
+                <div class="flex-empty"></div>
+                <div class="flex-login">
+                    <a href="">Log In</a>
+                    <a href="" class="flex-a">
+
+                        <p>Register</p>
+                    </a>
+                </div>
+                <div class="flex-feature">
+                    <div class="item1">
+                        <div class="line_1"></div>
+                        <i class="fa-solid fa-down-long"></i>
+                        <div class="line_2"></div>
+                    </div>
+                    <div class="item2">
+                        <i class="fa-solid fa-globe"></i>
+                        <p class="bar">|</p>
+                        <p>USD</p>
+                        <p class="bar">|</p>
+                        <i class="fas fa-sun"></i>
+                    </div>
                 </div>
             </div>
         </div>
