--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -19,8 +19,8 @@ html {
 #above {
     width: 1350px;
     height: 64px;
-    background-color: aqua;
     display: flex;
+    background-color: #181A20;
     justify-content: center;
 }
 
@@ -47,7 +47,9 @@ html {
 
 #menu_above {
     width: 1318px;
-    background-color: brown;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #logo {
@@ -61,6 +63,185 @@ html {
 #logo img {
     width: 120px;
     height: 24px;
+}
+
+.flex-feature {
+    display: flex;
+}
+
+.flex-menu {
+    display: flex;
+}
+
+.item-menu {
+    padding: 0 8px;
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    font-size: 14px;
+    cursor: pointer;
+    color: #EAECEF;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: none;
+    height: 100%;
+}
+
+.vnd {
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    position: relative;
+    border-radius: 4px;
+    margin-left: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
+    font-size: 12px;
+    line-height: 16px;
+    background-color: #FCD535;
+    color: #1E2329;
+}
+
+.item-menu i:hover {
+    transform: rotate(180deg);
+}
+
+.vnd:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: -3px;
+    top: 2px;
+    border-left: 0;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid;
+    border-right-color: #F0B90B;
+}
+
+.flex-login {
+    padding: 0 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-login a {
+    margin: 0;
+    padding: 6px 12px;
+    max-height: 20px;
+}
+
+.flex-login .flex-a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 52px;
+    background-color: rgb(252, 213, 53);
+    color: rgb(24, 26, 32);
+    border-radius: 4px;
+    font-size: 14px;
+    margin-left: 12px;
+}
+
+.flex-feature {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.flex-feature .item1 {
+    color: white;
+    padding: 0 8px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    font-size: 11px;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-feature .item1 i {
+    height: 10px;
+}
+
+.line_1 {
+    height: 50px;
+    width: 8px;
+    border-top: 3px solid white;
+    border-left: 5px solid white;
+    border-right: 5px solid white;
+}
+
+.line_2 {
+    height: 50px;
+    width: 8px;
+    border-bottom: 3px solid white;
+    border-left: 5px solid white;
+    border-right: 5px solid white;
+}
+
+.flex-feature .item2 {
+    padding: 0 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #EAECEF;
+    font-size: 14px;
+    height: 100%;
+}
+
+.fa-globe-africa {
+    margin: 0;
+    color: #ffffff;
+}
+
+.flex-feature p,
+i {
+    cursor: pointer;
+}
+
+.flex-feature p {
+    margin: 0;
+}
+
+.flex-feature .item2 .bar {
+    margin: 0 8px;
+    color: #5E6673;
+    cursor: none;
+}
+
+.gift {
+    position: relative;
+    top: 0;
+    z-index: 5;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: rgb(60, 38, 1);
+}
+
+.gift a {
+    margin: auto;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gift p {
+    color: rgb(183, 189, 198);
+    margin: 0;
+    margin-right: 8px;
+}
+
+.gift i {
+    font-size: 15px;
+    margin: 0;
+    margin-right: 10px;
 }
 
 #body_center {
