--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -15,70 +15,97 @@
 <body>
     <div id="product">
         <div id="above">
-            <div id="menu_above">
-                <div id="logo">
-                    <a href=""><img src="../static/img/bab_token/binance-h.png" alt=""></a>
+            <div id="menu">
+                <div id="logo_item">
+                    <div id="logo">
+                        <a href=""><img src="../static/img/bab_token/binance-h.png" alt=""></a>
+                    </div>
+                    <div class="menu_above">
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <img src="../static/img/bab_token/babt-menu.png" alt="" style="width: 20px; height:20px;">
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Buy Crypto</p>
+                                <div class="vnd">EUR</div>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Markets</p>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Trade</p>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Delivatives</p>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Earn</p>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i></div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Finance</p>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>NFT</p>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Institutional</p>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="item-menu">
+                            <div class="item_conten">
+                                <p>Feed</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="flex-menu">
-                    <div class="item-menu" style="width: 58px; ">
-                        <img src="../static/img/bab_token/babt-menu.png" alt="" style="width: 20px; height:20px;">
-                        <i class="fa fa-caret-down" aria-hidden="true" style="margin: 0;"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Buy Crypto</p>
-                        <div class="vnd">USD</div>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Markets</p>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Trade</p>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Delivatives</p>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Earn</p>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Finance</p>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>NFT</p>
-                    </div>
-                    <div class="item-menu">
-                        <p>Institutional</p>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="item-menu">
-                        <p>Feed</p>
+                <div id="item_login">
+                    <div id="Log_In"><a href="">Log In</a></div>
+                    <div id="Register">
+                        <a href="">
+                            <p>Register</p>
+                        </a>
                     </div>
                 </div>
-                <div class="flex-empty"></div>
-                <div class="flex-login">
-                    <a href="">Log In</a>
-                    <a href="" class="flex-a">
-
-                        <p>Register</p>
-                    </a>
-                </div>
-                <div class="flex-feature">
-                    <div class="item1">
-                        <div class="line_1"></div>
-                        <i class="fa-solid fa-down-long"></i>
-                        <div class="line_2"></div>
+                <div id="icon_menu">
+                    <div id="down">
+                        <div class="item_1">
+                            <a href="">
+                                <div class="line_1"></div>
+                            </a>
+                            <i class="fa-solid fa-down-long"></i>
+                            <a href="">
+                                <div class="line_2"></div>
+                            </a>
+                        </div>
                     </div>
-                    <div class="item2">
-                        <i class="fa-solid fa-globe"></i>
-                        <p class="bar">|</p>
+                    <div class="item_2">
+                        <i class="fa-solid fa-globe" style="font-size: 17.5px;"></i>
+                        <p class="line_3">|</p>
                         <p>USD</p>
-                        <p class="bar">|</p>
+                        <p class="line_3">|</p>
                         <i class="fas fa-sun"></i>
                     </div>
                 </div>
