--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -269,6 +269,24 @@
                                     <div class="text2">Complete the identity verification process to secure your account and transactions.</div>
                                 </div>
                             </div>
+                            <div class="line">
+                                <div class="left">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="none"><path d="M30 45l10 10 10-10v25H30V45z" fill="url(#paint0_linear_1288_31960)"/><path d="M39.998 38.334c-8.284 0-15-6.716-15-15 0-8.284 6.715-15 15-15 8.284 0 15 6.716 15 15 0 8.285-6.716 15-15 15z" fill="url(#paint1_linear_1288_31960)"/><path opacity=".2" d="M64.166 38.334l3.333 3.333 3.334-3.334L67.499 35l-3.333 3.334zm-47.5-31.667l2.5 2.5 2.5-2.5-2.5-2.5-2.5 2.5zm-10 24.166L8.333 32.5l1.666-1.667-1.666-1.666-1.667 1.666z" fill="#76808F"/><path d="M30 45h-6.667C15.97 45 10 50.97 10 58.333V70h20V45z" fill="url(#paint2_linear_1288_31960)"/><path d="M50 70h20V58.333C70 50.97 64.03 45 56.667 45H50v25z" fill="url(#paint3_linear_1288_31960)"/><defs><linearGradient id="paint0_linear_1288_31960" x1="40" y1="70" x2="40" y2="45" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"/><stop offset="1" stop-color="#F8D33A"/></linearGradient><linearGradient id="paint1_linear_1288_31960" x1="39.998" y1="38.334" x2="39.998" y2="8.334" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"/><stop offset="1" stop-color="#F8D33A"/></linearGradient><linearGradient id="paint2_linear_1288_31960" x1="40" y1="45" x2="40" y2="70" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint3_linear_1288_31960" x1="40" y1="45" x2="40" y2="70" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient></defs></svg>
+                                </div>
+                                <div class="right">
+                                    <div class="text1">Fund your account</div>
+                                    <div class="text2">Add funds to your crypto account to start trading crypto. You can add funds with a variety of payment methods.</div>
+                                </div>
+                            </div>
+                            <div class="line">
+                                <div class="left">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="none"><circle r="19.583" transform="matrix(1 0 0 -1 51.25 28.75)" fill="url(#paint0_linear_1288_31983)"/><circle cx="51.25" cy="28.75" r="13.781" fill="#76808F"/><path d="M44.2 28.75l7.05-7.05 7.05 7.05-7.05 7.05-7.05-7.05z" fill="#929AA5"/><circle r="19.583" transform="matrix(1 0 0 -1 28.75 51.25)" fill="#F8D33A"/><circle transform="matrix(1 0 0 -1 28.75 51.25)" fill="url(#paint1_linear_1288_31983)" r="13.781"/><path d="M21.7 51.25l7.05 7.05 7.05-7.05-7.05-7.05-7.05 7.05z" fill="#F0B90B"/><path opacity=".2" d="M25.834 18.75l2.083-2.083 2.084 2.083-2.084 2.083-2.083-2.083zm25 37.916l3.333-3.333 3.334 3.334L54.167 60l-3.333-3.334zM5 39.167L6.667 37.5l1.666 1.667-1.666 1.666L5 39.167zM30 10H10v20l20-20zm20 60h20V50L50 70z" fill="#76808F"/><defs><linearGradient id="paint0_linear_1288_31983" x1="19.583" y1="0" x2="19.583" y2="39.167" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint1_linear_1288_31983" x1="13.781" y1="0" x2="13.781" y2="27.562" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"/><stop offset="1" stop-color="#F8D33A"/></linearGradient></defs></svg>
+                                </div>
+                                <div class="right">
+                                    <div class="text1">Start trading</div>
+                                    <div class="text2">You're good to go! Buy/sell crypto, set up recurring buys for your investments, and discover what Binance has to offer.</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="right">
                             <img src="../static/img/homepage/content5-foreimage.webp" alt="">
