Homepage: Content5 - Update html, css and add demo20 - create button, complete content5

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -653,7 +653,7 @@ a.crypto{
     color: #EAECEF;
 }
 
-.content4 .get-start{
+.get-start{
     min-width: 160px;
     display: inline-flex;
     justify-content: center;
