--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -403,6 +403,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="content6-container">
+                    <div class="content6" style="max-width: 1200px;">
+                        <div class="h1">Earn daily rewards on your idle tokens</div>
+                        <div class="h5">Simple & Secure. Search popular coins and start earning.</div>
+                        
+                    </div>
+                </div>
             </main>
             <footer></footer>
         </div>
